--- a/src/scss/content/tags.scss
+++ b/src/scss/content/tags.scss
@@ -23,4 +23,7 @@ body:not(.minimal-unstyled-tags) {
 	--tag-border-color: var(--background-modifier-border);
 	--tag-border-color-hover: var(--background-modifier-border-hover);
 	--tag-color-hover: var(--text-normal);
+	&.is-mobile.theme-dark {
+		--tag-background: transparent;
+	}
 }
